<resources>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="location_client_powered_by_google">Powered by Google</string>
    <string name="app_name">DJI Pilot</string>
    <string name="action_settings">Settings</string>
    <string name="gs_speed_fast">Fast</string>
    <string name="gs_speed_slow">Slow</string>
    <string name="gs_speed_medium">Mid</string>
    <string name="gs_direction_front">FRONT</string>
    <string name="gs_direction_back">BACK</string>
    <string name="gs_direction_left">LEFT</string>
    <string name="gs_direction_right">RIGHT</string>
    <string name="gs_manager_do_pausefly">Pause</string>
    <string name="gs_manager_do_cacel">Cancel Mission</string>
    <string name="gs_manager_do_resumefly">Continue</string>
    <string name="gs_manager_do_gohome">Go Home</string>
    <string name="gs_manager_do_fly">Take off</string>
    <string name="gs_manager_disconnect">Connection Broken</string>
    <string name="gs_manager_open_gs_fail">GS failed to open. Retrying</string>
    <string name="gs_manager_switch_gps_mode">"Switch To GPS mode
(Ready to fly mode)"</string>
    <string name="gs_manager_error">Unknown Error code=%d. Contact DJI Technical Support</string>
    <string name="gs_manager_upload_task_fail">Mission Upload Failed. Check Network</string>
    <string name="gs_manager_e_machine_not_running">%s Failed. Motors not Spinning</string>
    <string name="gs_manager_gps_not_ready">%s Failed. GPS not Ready</string>
    <string name="gs_manager_overtime">%s Failed. Command Timeout</string>
    <string name="gs_manager_upload_point_index">Waypoint %d Uploading</string>
    <string name="gs_manager_download_point_fail">Mission Download Failed, retrying</string>
    <string name="gs_manager_download_point_index">Waypoint %d Downloading</string>
    <string name="gs_manager_fly_line_over">Mission Complete</string>
    <string name="gs_manager_waypoint_count_exceed">No More Waypoints Available</string>
    <string name="gs_manager_fly_line_come_into_forbidden_area">Flight Paths Cannot Cross Restricted Areas</string>
    <string name="gs_manager_fly_line_exceed_area">Waypoint Out of Bounds</string>
    <string name="gs_manager_fly_line_exceed_max" formatted="false">Maximum Flight Distance %d%s Exceeded</string>
    <string name="gs_manager_whether_to_delete_fly_points">Delete all Waypoints?</string>
    <string name="gs_manager_whether_to_go_home">Go Home?</string>
    <string name="gs_manager_whether_to_cancel_task">Cancel Mission?</string>
    <string name="gs_manager_battery_low">Power Below 30%. Takeoff Prevented</string>
    <string name="gs_manager_battery_low_flying">Power Below 30%. Go-Home?</string>
    <string name="gs_manager_battery_low_mid">Power Below 50%. Fly Cautiously</string>
    <string name="gs_manager_gps_low">Poor GPS Signal. Switch to Transmitter Control</string>
    <string name="gs_manager_point_info">Point</string>
    <string name="gs_manager_m">Meter</string>
    <string name="gs_manager_ft">Feet</string>
    <string name="gs_manager_state_bar_mode_manual">MANUAL</string>
    <string name="gs_manager_state_bar_mode_gps">GPS</string>
    <string name="gs_manager_state_bar_mode_atti">ATTI</string>
    <string name="gs_manager_state_bar_mode_pause">HOVER</string>
    <string name="gs_manager_state_bar_mode_waypoint">WAYPOINT</string>
    <string name="gs_manager_state_bar_mode_gohome">GOHOME</string>
    <string name="gs_manager_state_bar_mode_takeoff">TAKEOFF</string>
    <string name="gs_manager_state_bar_mode_landing">LANDING</string>
    <string name="gs_manager_state_bar_mode_no">N/A</string>
    <string name="gs_txt_vision_direction">Vision Direction</string>
    <string name="gs_txt_height">Height</string>
    <string name="gs_txt_direction">Direction</string>
    <string name="gs_txt_go">GO</string>
    <string name="gs_txt_done">DONE</string>
    <string name="warning_battery_error">Battery Communication Error. Fly Carefully</string>
    <string name="gs_maptype_standard">Standard</string>
    <string name="gs_maptype_hybrid">Hybrid</string>
    <string name="gs_maptype_satellite">Satellite</string>
    <string name="gs_txt_inchina_dialog_title">Warning</string>
    <string name="gs_txt_inchina_dialog_detail">Ground Station Is Forbidden In China</string>
    <string name="gs_txt_inchina_dialog_btn">Back</string>
    <string name="gs_electriciry_time_unit">min</string>
    <string name="gs_electriciry_time_string">0min</string>
    <string name="gs_electriciry_go_home_after_10s">Go Home In 10 Seconds</string>
    <string name="gs_electriciry_go_home_after_10s_format">Go Home In %d Seconds</string>
    <string name="gs_electriciry_go_home_cancel">Cancel</string>
    <string name="gs_electriciry_go_home_now">Go Home</string>
    <string name="gs_electriciry_go_home_msg">If you cancel, there may not be enough battery power to return to the home point!</string>
    <string name="gs_maker_info_latitude">Latitude</string>
    <string name="gs_maker_info_lontitude">Lontitude</string>
    <string name="gs_maker_info_invalid_coordinates">Invalid Waypoint Coordinate</string>
    <string name="gs_maker_info_coordinates_too_far">Waypoint Coordinate too far away from Home Point</string>
    <string name="gs_maker_info_coordinates_in_restrict_area">Waypoints cannot be set in a restricted area</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">Pull up to refresh</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="flyc_limit_low">(1~2M)</string>
    <string name="flyc_limit_high">(1~100M)</string>
    <string name="flyc_limit_dis">(2~50M)</string>
    <string name="flyc_home">(2~100M)</string>
    <string name="flyc_calib_desc">Calibrate Compass</string>
    <string name="flyc_resetall_desc">Reset All Settings</string>
    <string name="flyc_unlock_desc">Unlock Motor</string>
    <string name="flyc_pack_desc">Enter Travel Mode</string>
    <string name="flyc_unpack_desc">Exit Travel Mode</string>
    <string name="flyc_adv_gain_desc">Only advanced users should modify these settings. Any changes will affect aircraft attitude and gain. Make adjustments with extreme caution.</string>
    <string name="flyc_adv_gain_pitch_desc">Pitch</string>
    <string name="flyc_adv_gain_pitch_adv_desc">Advanced Gain</string>
    <string name="flyc_adv_gain_pitch" formatted="false">(50%~200%)</string>
    <string name="flyc_adv_gain_roll_desc">Roll</string>
    <string name="flyc_adv_gain_roll_adv_desc">Gyro Gain</string>
    <string name="flyc_adv_gain_roll" formatted="false">(50%~200%)</string>
    <string name="flyc_adv_gain_yaw_desc">Yaw</string>
    <string name="flyc_adv_gain_vertical_desc">Vertical</string>
    <string name="flyc_adv_gain_yaw" formatted="false">(50%~200%)</string>
    <string name="fpv_flyc_deform">Enable force transform</string>
    <string name="flyc_adv_gain_basic">Basic Gain</string>
    <string name="flyc_adv_gain_atti">Atti Gain</string>
    <string name="fpv_flyc_ioc_toggle_desc">Enable IOC</string>
    <string name="fpv_flyc_fpa_toggle_desc">Enable Multiple Mode</string>
    <string name="fpv_flyc_ioc_reset_desc">Reset IOC</string>
    <string name="fpv_gensetting_lowflight_toggle_desc">Minimum Altitude (ground avoidance)</string>
    <string name="fpv_gensetting_lowflight_desc">Avoid Group Altitude</string>
    <string name="fpv_gensetting_heightflight_toggle_desc">Maximum Altitude</string>
    <string name="fpv_gensetting_heightflight_desc">Maximum Altitude</string>
    <string name="fpv_gensetting_distanceflight_toggle_desc">Distance Limit</string>
    <string name="fpv_gensetting_beginner_toggle_desc">Beginner Mode</string>
    <string name="fpv_gensetting_distanceflight_desc">Maximum Flight Distance</string>
    <string name="fpv_gensetting_camera">CAMERA</string>
    <string name="fpv_gensetting_reset_camera_setting">Reset Camera Settings</string>
    <string name="fpv_gensetting_format_sdcard">Format SD Card</string>
    <string name="fpv_gensetting_homepoint">Dynamic Home Point Reset Every:</string>
    <string name="fpv_gensetting_showgrid">Show Grid</string>
    <string name="fpv_gensetting_quickpreview">Quick Review</string>
    <string name="fpv_gensetting_videotyle_desc">NTSC/PAL</string>
    <string name="fpv_gensetting_videotyle_pal">PAL</string>
    <string name="fpv_gensetting_videotyle_ntsc">NTSC</string>
    <string name="fpv_gensetting_video_caption">Video Caption</string>
    <string name="fpv_gensetting_video_caption_disable">(Disable In Record Status)</string>
    <string name="fpv_camera_antiblink">Anti-Flicker</string>
</resources>