<?xml version="1.0" encoding="utf-8"?>
<dji.publics.DJIUI.DJILinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phantom="http://schemas.android.com/apk/res/dji.pilot">
    <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_camera_title_tv" android:text="@string/fpv_gensetting_camera" phantom:djiTextFace="demi" style="@style/FpvGenSettingItemTitle" />
    <dji.publics.DJIUI.DJIRelativeLayout style="@style/FpvGenTopItemLy">
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_video_caption_desc_tv" android:text="@string/fpv_gensetting_video_caption" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_video_caption_enable_tv" android:text="@string/fpv_gensetting_video_caption_disable" android:layout_toRightOf="@id/fpv_gensetting_video_caption_desc_tv" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
        <dji.pilot.publics.widget.DJISwitch android:id="@id/fpv_gensetting_video_caption_switch" android:layout_alignParentRight="true" android:layout_centerVertical="true" phantom:djiTextFace="demi" style="@style/CommonSwitch" />
    </dji.publics.DJIUI.DJIRelativeLayout>
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJILinearLayout android:gravity="center_vertical" style="@style/FpvGenMiddleItemLy">
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_showgrid_desc_tv" android:text="@string/fpv_gensetting_showgrid" android:layout_weight="1.0" style="@style/FpvGenSettingDescTxt" />
        <dji.pilot.publics.widget.CustomerSpinner android:id="@id/fpv_gensetting_showgrid_sp" android:layout_width="@dimen/fpv_large_spinner_width" style="@style/CustomSpinnerStyle" />
    </dji.publics.DJIUI.DJILinearLayout>
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJILinearLayout android:gravity="center_vertical" style="@style/FpvGenMiddleItemLy">
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_quickpreview_desc_tv" android:text="@string/fpv_gensetting_quickpreview" android:layout_weight="1.0" style="@style/FpvGenSettingDescTxt" />
        <dji.pilot.publics.widget.CustomerSpinner android:id="@id/fpv_gensetting_quickpreview_sp" android:layout_width="@dimen/fpv_large_spinner_width" style="@style/CustomSpinnerStyle" />
    </dji.publics.DJIUI.DJILinearLayout>
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJILinearLayout android:gravity="center_vertical" style="@style/FpvGenMiddleItemLy">
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_antiblink_desc_tv" android:text="@string/fpv_camera_antiblink" android:layout_weight="1.0" style="@style/FpvGenSettingDescTxt" />
        <dji.pilot.publics.widget.CustomerSpinner android:id="@id/fpv_gensetting_antiblink_sp" android:layout_width="@dimen/fpv_large_spinner_width" style="@style/CustomSpinnerStyle" />
    </dji.publics.DJIUI.DJILinearLayout>
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJIRelativeLayout style="@style/FpvGenMiddleItemLy">
        <dji.publics.DJIUI.DJITextView android:id="@id/fpv_gensetting_videotyle_desc_tv" android:text="@string/fpv_gensetting_videotyle_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/fpv_gensetting_videotyle_rg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <RadioButton android:textSize="@dimen/txt_twelve" android:textColor="@color/white" android:gravity="center" android:id="@id/fpv_gensetting_videotyle_pal_rb" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:button="@drawable/selector_radiobutton" android:text="@string/fpv_gensetting_videotyle_pal" />
            <RadioButton android:textSize="@dimen/txt_twelve" android:textColor="@color/white" android:gravity="center" android:id="@id/fpv_gensetting_videotyle_ntsc_rb" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:button="@drawable/selector_radiobutton" android:text="@string/fpv_gensetting_videotyle_ntsc" />
        </RadioGroup>
    </dji.publics.DJIUI.DJIRelativeLayout>
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJITextView android:textSize="@dimen/txt_twelve" android:textColor="@color/white" android:gravity="center" android:id="@id/fpv_gensetting_reset_camera_setting_tv" android:text="@string/fpv_gensetting_reset_camera_setting" style="@style/FpvGenMiddleItemLy" />
    <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
    <dji.publics.DJIUI.DJITextView android:textSize="@dimen/txt_twelve" android:textColor="@color/white" android:gravity="center" android:id="@id/fpv_gensetting_format_sdcard_tv" android:text="@string/fpv_gensetting_format_sdcard" style="@style/FpvGenBottomItemLy" />
</dji.publics.DJIUI.DJILinearLayout>