<?xml version="1.0" encoding="utf-8"?>
<dji.pilot.fpv.view.DJIFlycGainStageView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phantom="http://schemas.android.com/apk/res/dji.pilot">
    <dji.publics.DJIUI.DJILinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_basic" phantom:djiTextFace="demi" style="@style/FpvGenSettingItemTitle" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenTopItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_pitch_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_gain_pitch" android:digits="0123456789" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:inputType="numberSigned" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_gain_pitch_range" android:text="@string/flyc_adv_gain_pitch" android:layout_toLeftOf="@id/fpv_flyc_gain_pitch" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenMiddleItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_roll_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_gain_roll" android:layout_alignParentRight="true" android:layout_centerVertical="true" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_gain_roll_range" android:text="@string/flyc_adv_gain_roll" android:layout_toLeftOf="@id/fpv_flyc_gain_roll" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenBottomItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_yaw_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_gain_yaw" android:layout_alignParentRight="true" android:layout_centerVertical="true" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_gain_yaw_range" android:text="@string/flyc_adv_gain_yaw" android:layout_toLeftOf="@id/fpv_flyc_gain_yaw" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_atti" phantom:djiTextFace="demi" style="@style/FpvGenSettingItemTitle" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenTopItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_pitch_adv_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_atti_pitch" android:digits="0123456789" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:inputType="numberSigned" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_atti_pitch_range" android:text="@string/flyc_adv_gain_pitch" android:layout_toLeftOf="@id/fpv_flyc_atti_pitch" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenMiddleItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_roll_adv_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_atti_roll" android:layout_alignParentRight="true" android:layout_centerVertical="true" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_atti_roll_range" android:text="@string/flyc_adv_gain_roll" android:layout_toLeftOf="@id/fpv_flyc_atti_roll" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJIImageView style="@style/FpvGenSettingDivider" />
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" style="@style/FpvGenBottomItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_vertical_desc" android:layout_centerVertical="true" style="@style/FpvGenSettingDescTxt" />
            <dji.pilot.publics.widget.DJIEditText android:id="@id/fpv_flyc_atti_yaw" android:layout_alignParentRight="true" android:layout_centerVertical="true" phantom:djiTextFace="nbold" style="@style/FpvGenSettingEtview" />
            <dji.publics.DJIUI.DJITextView android:id="@id/fpv_flyc_atti_yaw_range" android:text="@string/flyc_adv_gain_yaw" android:layout_toLeftOf="@id/fpv_flyc_atti_yaw" android:layout_centerVertical="true" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
        <dji.publics.DJIUI.DJIRelativeLayout android:gravity="center_vertical" android:layout_marginTop="10.0dip" style="@style/FpvGenSettingItemLy">
            <dji.publics.DJIUI.DJITextView android:text="@string/flyc_adv_gain_desc" style="@style/FpvGenSettingDescMoreTxt" />
        </dji.publics.DJIUI.DJIRelativeLayout>
    </dji.publics.DJIUI.DJILinearLayout>
</dji.pilot.fpv.view.DJIFlycGainStageView>